--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-<main id="content" class="main-content" role="main">
-      <h1 id="hello-world">LINKS FOR STUDENTS</h1>
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
+</html>
