--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My GitHub Pages Site</title>
+    <title>Fruity cove</title>
   </head>
   <body>
     <h1>Hello world!</h1>
