--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Fruity cove</title>
   </head>
   <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my GitHub Pages site!</p>
+    <h1>LINKS FOR STUDENTS</h1>
   </body>
 </html>
