--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Fruity cove</title>
   </head>
   <body>
-    <h1>LINKS FOR STUDENTS</h1>
+    <div class="title">LINKS FOR STUDENTS</div>
   </body>
 </html>
