--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Fruity cove</title>
   </head>
   <body>
-    <div class="title">LINKS FOR STUDENTS</div>
+    <div class="title">
+      plz work
+    </div>
   </body>
 </html>
